# rust-ps

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
boj-test/: Cargo.toml
boj-test/src/: autocheck.rs
rust-ps/: Cargo.toml
rust-ps/src/: main.rs
src/: boj_scraper.rs  lib.rs  main.rs
src/pslib/: algebra.rs  mod.rs  util.rs
src/pslib/algebra/: mod.rs  ntt.rs  prime.rs
