[package]
name = "rust-ps"
version = "0.1.0"
edition = "2021"
default-run = "rust-ps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autocheck"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"

[profile.release]
debug = true
